--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -13,6 +13,7 @@
     <string name="squareGreeting">Welcome to the triangle calculator. Please enter the necessary values,based on the chosen formula.</string>
     <string name="width">Width</string>
     <string name="length">Length</string>
+    <string name="buttonSignIN">Sign In</string>
 
     <string-array name="triangle_formula_arrays">
         <item>Find area using base and height</item>
@@ -26,4 +27,18 @@
         <item>Find area using length and diagonal</item>
         <item>Find perimeter using width and height</item>
     </string-array>
+    <string name="title_activity_login">Sign in</string>
+
+    <!-- Strings related to login -->
+    <string name="prompt_email">Email</string>
+    <string name="prompt_password">Password (optional)</string>
+    <string name="action_sign_in">Sign in or register</string>
+    <string name="action_sign_in_short">Sign in</string>
+    <string name="error_invalid_email">This email address is invalid</string>
+    <string name="error_invalid_password">This password is too short</string>
+    <string name="error_incorrect_password">This password is incorrect</string>
+    <string name="error_field_required">This field is required</string>
+    <string name="permission_rationale">"Contacts permissions are needed for providing email
+        completions."
+    </string>
 </resources>
